// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Email Templates ForecastDigestEmail Snapshot Tests should match snapshot for excellent conditions with crowd warning 1`] = `
<div>
  <div
    style="font-family: Arial, sans-serif; line-height: 1.6; max-width: 600px; margin: 0px auto; background-color: rgb(255, 255, 255);"
  >
    <div
      style="background-color: rgb(0, 102, 204); padding: 24px 20px; text-align: center;"
    >
      <h1
        style="color: rgb(255, 255, 255); margin: 0px; font-size: 24px; font-weight: bold;"
      >
        Your Quiver Daily Playbook
      </h1>
      <p
        style="color: rgb(255, 255, 255); margin: 8px 0px 0px 0px; font-size: 16px; opacity: 0.9;"
      >
        Monday, January 6
      </p>
    </div>
    <div
      style="padding: 24px 20px;"
    >
      <p
        style="font-size: 16px; margin: 0px 0px 16px 0px;"
      >
        Hey Alex,
         
        ✨
      </p>
      <h2
        style="font-size: 22px; margin: 0px 0px 20px 0px; color: rgb(51, 51, 51);"
      >
        Excellent
         Conditions at 
        Ocean Beach
      </h2>
      <table
        style="width: 100%; border-collapse: collapse; margin-bottom: 24px;"
      >
        <tbody>
          <tr>
            <td
              style="padding: 12px 16px; border-bottom: 1px solid #e5e5e5; font-weight: bold; color: rgb(85, 85, 85); width: 35%;"
            >
              Waves
            </td>
            <td
              style="padding: 12px 16px; border-bottom: 1px solid #e5e5e5; color: rgb(51, 51, 51);"
            >
              3-5ft
               @ 
              12s
            </td>
          </tr>
          <tr>
            <td
              style="padding: 12px 16px; border-bottom: 1px solid #e5e5e5; font-weight: bold; color: rgb(85, 85, 85);"
            >
              Wind
            </td>
            <td
              style="padding: 12px 16px; border-bottom: 1px solid #e5e5e5; color: rgb(51, 51, 51);"
            >
              5mph
               
              NE (offshore)
            </td>
          </tr>
          <tr>
            <td
              style="padding: 12px 16px; border-bottom: 1px solid #e5e5e5; font-weight: bold; color: rgb(85, 85, 85);"
            >
              Tide
            </td>
            <td
              style="padding: 12px 16px; border-bottom: 1px solid #e5e5e5; color: rgb(51, 51, 51);"
            >
              Low, incoming
            </td>
          </tr>
          <tr>
            <td
              style="padding: 12px 16px; border-bottom: 1px solid #e5e5e5; font-weight: bold; color: rgb(85, 85, 85);"
            >
              Best Window
            </td>
            <td
              style="padding: 12px 16px; border-bottom: 1px solid #e5e5e5; color: rgb(51, 51, 51);"
            >
              8:30 AM
               - 
              9:30 AM
            </td>
          </tr>
        </tbody>
      </table>
      <div
        style="background-color: rgb(245, 249, 255); padding: 20px; border-radius: 8px; margin-bottom: 24px;"
      >
        <h3
          style="font-size: 14px; font-weight: bold; color: rgb(0, 102, 204); margin: 0px 0px 12px 0px; text-transform: uppercase; letter-spacing: 0.5px;"
        >
          Why This Matches Your Playbook
        </h3>
        <ul
          style="margin: 0px; padding-left: 20px; color: rgb(51, 51, 51);"
        >
          <li
            style="margin-bottom: 8px;"
          >
            Wave height matches your 3-6ft preference
          </li>
          <li
            style="margin-bottom: 8px;"
          >
            Offshore wind creates clean faces
          </li>
          <li
            style="margin-bottom: 8px;"
          >
            Low tide incoming, your preferred tide direction
          </li>
        </ul>
      </div>
      <div
        style="background-color: rgb(255, 243, 205); border-left: 4px solid #ffc107; padding: 16px 20px; border-radius: 0 8px 8px 0; margin-bottom: 24px;"
      >
        <p
          style="margin: 0px; color: rgb(102, 77, 3);"
        >
          <strong>
            ⚠️ Heads up:
          </strong>
           
          Heavy crowds expected
        </p>
      </div>
      <div
        style="text-align: center; margin-bottom: 32px;"
      >
        <a
          href="https://quiversurf.app/beaches/ocean-beach"
          style="background-color: rgb(0, 102, 204); color: rgb(255, 255, 255); padding: 14px 28px; text-decoration: none; border-radius: 8px; display: inline-block; font-size: 16px; font-weight: bold;"
        >
          Check Full Forecast →
        </a>
      </div>
    </div>
    <div
      style="border-top: 1px solid #e5e5e5; padding: 20px; text-align: center;"
    >
      <p
        style="font-size: 12px; color: rgb(102, 102, 102); margin: 0px 0px 8px 0px;"
      >
        You're receiving this because you have forecast alerts enabled for
         
        Ocean Beach
        .
      </p>
      <a
        href="https://quiversurf.app/settings/notifications"
        style="font-size: 12px; color: rgb(0, 102, 204); text-decoration: underline;"
      >
        Unsubscribe from these alerts
      </a>
    </div>
  </div>
</div>
`;

exports[`Email Templates ForecastDigestEmail Snapshot Tests should match snapshot for fair conditions 1`] = `
<div>
  <div
    style="font-family: Arial, sans-serif; line-height: 1.6; max-width: 600px; margin: 0px auto; background-color: rgb(255, 255, 255);"
  >
    <div
      style="background-color: rgb(0, 102, 204); padding: 24px 20px; text-align: center;"
    >
      <h1
        style="color: rgb(255, 255, 255); margin: 0px; font-size: 24px; font-weight: bold;"
      >
        Your Quiver Daily Playbook
      </h1>
      <p
        style="color: rgb(255, 255, 255); margin: 8px 0px 0px 0px; font-size: 16px; opacity: 0.9;"
      >
        Monday, January 6
      </p>
    </div>
    <div
      style="padding: 24px 20px;"
    >
      <p
        style="font-size: 16px; margin: 0px 0px 16px 0px;"
      >
        Hey Alex,
         
        🌊
      </p>
      <h2
        style="font-size: 22px; margin: 0px 0px 20px 0px; color: rgb(51, 51, 51);"
      >
        Fair
         Conditions at 
        Ocean Beach
      </h2>
      <table
        style="width: 100%; border-collapse: collapse; margin-bottom: 24px;"
      >
        <tbody>
          <tr>
            <td
              style="padding: 12px 16px; border-bottom: 1px solid #e5e5e5; font-weight: bold; color: rgb(85, 85, 85); width: 35%;"
            >
              Waves
            </td>
            <td
              style="padding: 12px 16px; border-bottom: 1px solid #e5e5e5; color: rgb(51, 51, 51);"
            >
              3-5ft
               @ 
              12s
            </td>
          </tr>
          <tr>
            <td
              style="padding: 12px 16px; border-bottom: 1px solid #e5e5e5; font-weight: bold; color: rgb(85, 85, 85);"
            >
              Wind
            </td>
            <td
              style="padding: 12px 16px; border-bottom: 1px solid #e5e5e5; color: rgb(51, 51, 51);"
            >
              5mph
               
              NE (offshore)
            </td>
          </tr>
          <tr>
            <td
              style="padding: 12px 16px; border-bottom: 1px solid #e5e5e5; font-weight: bold; color: rgb(85, 85, 85);"
            >
              Tide
            </td>
            <td
              style="padding: 12px 16px; border-bottom: 1px solid #e5e5e5; color: rgb(51, 51, 51);"
            >
              Low, incoming
            </td>
          </tr>
          <tr>
            <td
              style="padding: 12px 16px; border-bottom: 1px solid #e5e5e5; font-weight: bold; color: rgb(85, 85, 85);"
            >
              Best Window
            </td>
            <td
              style="padding: 12px 16px; border-bottom: 1px solid #e5e5e5; color: rgb(51, 51, 51);"
            >
              8:30 AM
               - 
              9:30 AM
            </td>
          </tr>
        </tbody>
      </table>
      <div
        style="background-color: rgb(245, 249, 255); padding: 20px; border-radius: 8px; margin-bottom: 24px;"
      >
        <h3
          style="font-size: 14px; font-weight: bold; color: rgb(0, 102, 204); margin: 0px 0px 12px 0px; text-transform: uppercase; letter-spacing: 0.5px;"
        >
          Why This Matches Your Playbook
        </h3>
        <ul
          style="margin: 0px; padding-left: 20px; color: rgb(51, 51, 51);"
        >
          <li
            style="margin-bottom: 8px;"
          >
            Marginal conditions but surfable
          </li>
        </ul>
      </div>
      <div
        style="text-align: center; margin-bottom: 32px;"
      >
        <a
          href="https://quiversurf.app/beaches/ocean-beach"
          style="background-color: rgb(0, 102, 204); color: rgb(255, 255, 255); padding: 14px 28px; text-decoration: none; border-radius: 8px; display: inline-block; font-size: 16px; font-weight: bold;"
        >
          Check Full Forecast →
        </a>
      </div>
    </div>
    <div
      style="border-top: 1px solid #e5e5e5; padding: 20px; text-align: center;"
    >
      <p
        style="font-size: 12px; color: rgb(102, 102, 102); margin: 0px 0px 8px 0px;"
      >
        You're receiving this because you have forecast alerts enabled for
         
        Ocean Beach
        .
      </p>
      <a
        href="https://quiversurf.app/settings/notifications"
        style="font-size: 12px; color: rgb(0, 102, 204); text-decoration: underline;"
      >
        Unsubscribe from these alerts
      </a>
    </div>
  </div>
</div>
`;

exports[`Email Templates ForecastDigestEmail Snapshot Tests should match snapshot for perfect conditions 1`] = `
<div>
  <div
    style="font-family: Arial, sans-serif; line-height: 1.6; max-width: 600px; margin: 0px auto; background-color: rgb(255, 255, 255);"
  >
    <div
      style="background-color: rgb(0, 102, 204); padding: 24px 20px; text-align: center;"
    >
      <h1
        style="color: rgb(255, 255, 255); margin: 0px; font-size: 24px; font-weight: bold;"
      >
        Your Quiver Daily Playbook
      </h1>
      <p
        style="color: rgb(255, 255, 255); margin: 8px 0px 0px 0px; font-size: 16px; opacity: 0.9;"
      >
        Monday, January 6
      </p>
    </div>
    <div
      style="padding: 24px 20px;"
    >
      <p
        style="font-size: 16px; margin: 0px 0px 16px 0px;"
      >
        Hey Alex,
         
        🔥
      </p>
      <h2
        style="font-size: 22px; margin: 0px 0px 20px 0px; color: rgb(51, 51, 51);"
      >
        Perfect
         Conditions at 
        Ocean Beach
      </h2>
      <table
        style="width: 100%; border-collapse: collapse; margin-bottom: 24px;"
      >
        <tbody>
          <tr>
            <td
              style="padding: 12px 16px; border-bottom: 1px solid #e5e5e5; font-weight: bold; color: rgb(85, 85, 85); width: 35%;"
            >
              Waves
            </td>
            <td
              style="padding: 12px 16px; border-bottom: 1px solid #e5e5e5; color: rgb(51, 51, 51);"
            >
              3-5ft
               @ 
              12s
            </td>
          </tr>
          <tr>
            <td
              style="padding: 12px 16px; border-bottom: 1px solid #e5e5e5; font-weight: bold; color: rgb(85, 85, 85);"
            >
              Wind
            </td>
            <td
              style="padding: 12px 16px; border-bottom: 1px solid #e5e5e5; color: rgb(51, 51, 51);"
            >
              5mph
               
              NE (offshore)
            </td>
          </tr>
          <tr>
            <td
              style="padding: 12px 16px; border-bottom: 1px solid #e5e5e5; font-weight: bold; color: rgb(85, 85, 85);"
            >
              Tide
            </td>
            <td
              style="padding: 12px 16px; border-bottom: 1px solid #e5e5e5; color: rgb(51, 51, 51);"
            >
              Low, incoming
            </td>
          </tr>
          <tr>
            <td
              style="padding: 12px 16px; border-bottom: 1px solid #e5e5e5; font-weight: bold; color: rgb(85, 85, 85);"
            >
              Best Window
            </td>
            <td
              style="padding: 12px 16px; border-bottom: 1px solid #e5e5e5; color: rgb(51, 51, 51);"
            >
              8:30 AM
               - 
              9:30 AM
            </td>
          </tr>
        </tbody>
      </table>
      <div
        style="background-color: rgb(245, 249, 255); padding: 20px; border-radius: 8px; margin-bottom: 24px;"
      >
        <h3
          style="font-size: 14px; font-weight: bold; color: rgb(0, 102, 204); margin: 0px 0px 12px 0px; text-transform: uppercase; letter-spacing: 0.5px;"
        >
          Why This Matches Your Playbook
        </h3>
        <ul
          style="margin: 0px; padding-left: 20px; color: rgb(51, 51, 51);"
        >
          <li
            style="margin-bottom: 8px;"
          >
            Wave height matches your 3-6ft preference
          </li>
          <li
            style="margin-bottom: 8px;"
          >
            Offshore wind creates clean faces
          </li>
          <li
            style="margin-bottom: 8px;"
          >
            Low tide incoming, your preferred tide direction
          </li>
        </ul>
      </div>
      <div
        style="text-align: center; margin-bottom: 32px;"
      >
        <a
          href="https://quiversurf.app/beaches/ocean-beach"
          style="background-color: rgb(0, 102, 204); color: rgb(255, 255, 255); padding: 14px 28px; text-decoration: none; border-radius: 8px; display: inline-block; font-size: 16px; font-weight: bold;"
        >
          Check Full Forecast →
        </a>
      </div>
    </div>
    <div
      style="border-top: 1px solid #e5e5e5; padding: 20px; text-align: center;"
    >
      <p
        style="font-size: 12px; color: rgb(102, 102, 102); margin: 0px 0px 8px 0px;"
      >
        You're receiving this because you have forecast alerts enabled for
         
        Ocean Beach
        .
      </p>
      <a
        href="https://quiversurf.app/settings/notifications"
        style="font-size: 12px; color: rgb(0, 102, 204); text-decoration: underline;"
      >
        Unsubscribe from these alerts
      </a>
    </div>
  </div>
</div>
`;

exports[`Email Templates ForecastDigestEmail Snapshot Tests should match snapshot with minimal data 1`] = `
<div>
  <div
    style="font-family: Arial, sans-serif; line-height: 1.6; max-width: 600px; margin: 0px auto; background-color: rgb(255, 255, 255);"
  >
    <div
      style="background-color: rgb(0, 102, 204); padding: 24px 20px; text-align: center;"
    >
      <h1
        style="color: rgb(255, 255, 255); margin: 0px; font-size: 24px; font-weight: bold;"
      >
        Your Quiver Daily Playbook
      </h1>
      <p
        style="color: rgb(255, 255, 255); margin: 8px 0px 0px 0px; font-size: 16px; opacity: 0.9;"
      >
        Monday, January 6
      </p>
    </div>
    <div
      style="padding: 24px 20px;"
    >
      <p
        style="font-size: 16px; margin: 0px 0px 16px 0px;"
      >
        Hey there,
         
        ✨
      </p>
      <h2
        style="font-size: 22px; margin: 0px 0px 20px 0px; color: rgb(51, 51, 51);"
      >
        Excellent
         Conditions at 
        Ocean Beach
      </h2>
      <table
        style="width: 100%; border-collapse: collapse; margin-bottom: 24px;"
      >
        <tbody>
          <tr>
            <td
              style="padding: 12px 16px; border-bottom: 1px solid #e5e5e5; font-weight: bold; color: rgb(85, 85, 85); width: 35%;"
            >
              Waves
            </td>
            <td
              style="padding: 12px 16px; border-bottom: 1px solid #e5e5e5; color: rgb(51, 51, 51);"
            >
              3-5ft
               @ 
              12s
            </td>
          </tr>
          <tr>
            <td
              style="padding: 12px 16px; border-bottom: 1px solid #e5e5e5; font-weight: bold; color: rgb(85, 85, 85);"
            >
              Wind
            </td>
            <td
              style="padding: 12px 16px; border-bottom: 1px solid #e5e5e5; color: rgb(51, 51, 51);"
            >
              5mph
               
              NE (offshore)
            </td>
          </tr>
          <tr>
            <td
              style="padding: 12px 16px; border-bottom: 1px solid #e5e5e5; font-weight: bold; color: rgb(85, 85, 85);"
            >
              Tide
            </td>
            <td
              style="padding: 12px 16px; border-bottom: 1px solid #e5e5e5; color: rgb(51, 51, 51);"
            >
              Low, incoming
            </td>
          </tr>
        </tbody>
      </table>
      <div
        style="background-color: rgb(245, 249, 255); padding: 20px; border-radius: 8px; margin-bottom: 24px;"
      >
        <h3
          style="font-size: 14px; font-weight: bold; color: rgb(0, 102, 204); margin: 0px 0px 12px 0px; text-transform: uppercase; letter-spacing: 0.5px;"
        >
          Why This Matches Your Playbook
        </h3>
        <ul
          style="margin: 0px; padding-left: 20px; color: rgb(51, 51, 51);"
        >
          <li
            style="margin-bottom: 8px;"
          >
            Conditions match your preferences
          </li>
        </ul>
      </div>
      <div
        style="text-align: center; margin-bottom: 32px;"
      >
        <a
          href="https://quiversurf.app/beaches/ocean-beach"
          style="background-color: rgb(0, 102, 204); color: rgb(255, 255, 255); padding: 14px 28px; text-decoration: none; border-radius: 8px; display: inline-block; font-size: 16px; font-weight: bold;"
        >
          Check Full Forecast →
        </a>
      </div>
    </div>
    <div
      style="border-top: 1px solid #e5e5e5; padding: 20px; text-align: center;"
    >
      <p
        style="font-size: 12px; color: rgb(102, 102, 102); margin: 0px 0px 8px 0px;"
      >
        You're receiving this because you have forecast alerts enabled for
         
        Ocean Beach
        .
      </p>
      <a
        href="https://quiversurf.app/settings/notifications"
        style="font-size: 12px; color: rgb(0, 102, 204); text-decoration: underline;"
      >
        Unsubscribe from these alerts
      </a>
    </div>
  </div>
</div>
`;

exports[`Email Templates ForecastDigestEmail Snapshot Tests should match snapshot without best window 1`] = `
<div>
  <div
    style="font-family: Arial, sans-serif; line-height: 1.6; max-width: 600px; margin: 0px auto; background-color: rgb(255, 255, 255);"
  >
    <div
      style="background-color: rgb(0, 102, 204); padding: 24px 20px; text-align: center;"
    >
      <h1
        style="color: rgb(255, 255, 255); margin: 0px; font-size: 24px; font-weight: bold;"
      >
        Your Quiver Daily Playbook
      </h1>
      <p
        style="color: rgb(255, 255, 255); margin: 8px 0px 0px 0px; font-size: 16px; opacity: 0.9;"
      >
        Monday, January 6
      </p>
    </div>
    <div
      style="padding: 24px 20px;"
    >
      <p
        style="font-size: 16px; margin: 0px 0px 16px 0px;"
      >
        Hey Alex,
         
        ✨
      </p>
      <h2
        style="font-size: 22px; margin: 0px 0px 20px 0px; color: rgb(51, 51, 51);"
      >
        Excellent
         Conditions at 
        Ocean Beach
      </h2>
      <table
        style="width: 100%; border-collapse: collapse; margin-bottom: 24px;"
      >
        <tbody>
          <tr>
            <td
              style="padding: 12px 16px; border-bottom: 1px solid #e5e5e5; font-weight: bold; color: rgb(85, 85, 85); width: 35%;"
            >
              Waves
            </td>
            <td
              style="padding: 12px 16px; border-bottom: 1px solid #e5e5e5; color: rgb(51, 51, 51);"
            >
              3-5ft
               @ 
              12s
            </td>
          </tr>
          <tr>
            <td
              style="padding: 12px 16px; border-bottom: 1px solid #e5e5e5; font-weight: bold; color: rgb(85, 85, 85);"
            >
              Wind
            </td>
            <td
              style="padding: 12px 16px; border-bottom: 1px solid #e5e5e5; color: rgb(51, 51, 51);"
            >
              5mph
               
              NE (offshore)
            </td>
          </tr>
          <tr>
            <td
              style="padding: 12px 16px; border-bottom: 1px solid #e5e5e5; font-weight: bold; color: rgb(85, 85, 85);"
            >
              Tide
            </td>
            <td
              style="padding: 12px 16px; border-bottom: 1px solid #e5e5e5; color: rgb(51, 51, 51);"
            >
              Low, incoming
            </td>
          </tr>
        </tbody>
      </table>
      <div
        style="background-color: rgb(245, 249, 255); padding: 20px; border-radius: 8px; margin-bottom: 24px;"
      >
        <h3
          style="font-size: 14px; font-weight: bold; color: rgb(0, 102, 204); margin: 0px 0px 12px 0px; text-transform: uppercase; letter-spacing: 0.5px;"
        >
          Why This Matches Your Playbook
        </h3>
        <ul
          style="margin: 0px; padding-left: 20px; color: rgb(51, 51, 51);"
        >
          <li
            style="margin-bottom: 8px;"
          >
            Wave height matches your 3-6ft preference
          </li>
          <li
            style="margin-bottom: 8px;"
          >
            Offshore wind creates clean faces
          </li>
          <li
            style="margin-bottom: 8px;"
          >
            Low tide incoming, your preferred tide direction
          </li>
        </ul>
      </div>
      <div
        style="text-align: center; margin-bottom: 32px;"
      >
        <a
          href="https://quiversurf.app/beaches/ocean-beach"
          style="background-color: rgb(0, 102, 204); color: rgb(255, 255, 255); padding: 14px 28px; text-decoration: none; border-radius: 8px; display: inline-block; font-size: 16px; font-weight: bold;"
        >
          Check Full Forecast →
        </a>
      </div>
    </div>
    <div
      style="border-top: 1px solid #e5e5e5; padding: 20px; text-align: center;"
    >
      <p
        style="font-size: 12px; color: rgb(102, 102, 102); margin: 0px 0px 8px 0px;"
      >
        You're receiving this because you have forecast alerts enabled for
         
        Ocean Beach
        .
      </p>
      <a
        href="https://quiversurf.app/settings/notifications"
        style="font-size: 12px; color: rgb(0, 102, 204); text-decoration: underline;"
      >
        Unsubscribe from these alerts
      </a>
    </div>
  </div>
</div>
`;

